Nuevos endpoints inventory system
